--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,73 +1,105 @@
-
 services:
-  # ========= ОСНОВНЫЕ МИКРОСЕРВИСЫ =========
-  
+  # PostgreSQL Database
+  postgres:
+    image: postgres:15
+    container_name: aien_postgres
+    environment:
+      POSTGRES_DB: aien_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - aien_network
+
+  # Redis Cache
+  redis:
+    image: redis:7-alpine
+    container_name: aien_redis
+    ports:
+      - "6379:6379"
+    networks:
+      - aien_network
+
+  # MinIO Object Storage
+  minio:
+    image: minio/minio:latest
+    container_name: aien_minio
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
+    networks:
+      - aien_network
+
+  # Custom LLM Service
+  custom-llm:
+    build:
+      context: ./LLM
+      dockerfile: Dockerfile
+    container_name: aien_custom_llm
+    ports:
+      - "8124:8124"
+    environment:
+      - PORT=8124
+      - DEBUG=false
+    networks:
+      - aien_network
+
+
+  # API Gateway
   api-gateway:
-    build: ./api-geteway
+    build:
+      context: ./api-geteway
+      dockerfile: Dockerfile
+    container_name: aien_api_gateway
     ports:
       - "8080:8080"
       - "50051:50051"
-    depends_on:
-      - file-service
-      - chat-service
-      - llm-service
-      - orchestration-service
     environment:
-      - FILE_SERVICE_URL=file-service:50054
-      - CHAT_SERVICE_URL=chat-service:50055
-      - LLM_SERVICE_URL=llm-service:50056
-      - ORCHESTRATION_SERVICE_URL=orchestration-service:50057
-    networks:
-      - aien-network
-
-  file-service:
-    build: ./file-service
-    ports:
-      - "50054:50054"
-      - "8081:8080"  # HTTP для multipart uploads
-    depends_on:
-      - postgres
-      - minio
-    environment:
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_USER=fileuser
-      - DB_PASSWORD=filepass
-      - DB_NAME=fileservice
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=aien_db
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
       - MINIO_ENDPOINT=minio:9000
       - MINIO_ACCESS_KEY=minioadmin
       - MINIO_SECRET_KEY=minioadmin
-      - MINIO_BUCKET=files
-    networks:
-      - aien-network
-
-  chat-service:
-    build: ./chat-service
-    ports:
-      - "50055:50055"
+      - FILE_SERVICE_URL=file-service:50054
+      - ANALYSIS_SERVICE_URL=http://data-analysis-service:8080
+      - LLM_BASE_URL=http://custom-llm:8124/api/v1/process
+      - LLM_API_KEY=
+      - LLM_MODEL=openrouter/auto
     depends_on:
       - postgres
-    environment:
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_USER=chatuser
-      - DB_PASSWORD=chatpass
-      - DB_NAME=chatservice
-    networks:
-      - aien-network
-
-  llm-service:
-    build: ./llm-service
-    ports:
-      - "50056:50056"
-    depends_on:
-      - ollama
-      - postgres
+      - redis
       - minio
-      - airflow-webserver
+      - custom-llm
+      - file-service
+      - data-analysis-service
+    networks:
+      - aien_network
+
+
+  # File Service
+  file-service:
+    build:
+      context: ./file-service
+      dockerfile: Dockerfile
+    container_name: aien_file_service
+    ports:
+      - "8081:8080"
+      - "50054:50054"
     environment:
-      - OLLAMA_BASE_URL=http://ollama:11434
-      - LLM_MODEL=llama2
       - DB_HOST=postgres
       - DB_PORT=5432
       - DB_USER=postgres
@@ -76,148 +108,48 @@ services:
       - MINIO_ENDPOINT=minio:9000
       - MINIO_ACCESS_KEY=minioadmin
       - MINIO_SECRET_KEY=minioadmin
-      - MINIO_BUCKET=files
-      - AIRFLOW_BASE_URL=http://airflow-webserver:8080
-      - AIRFLOW_USERNAME=admin
-      - AIRFLOW_PASSWORD=admin
-    networks:
-      - aien-network
-
-  orchestration-service:
-    build: ./orchestration-service
-    ports:
-      - "50057:50057"
     depends_on:
       - postgres
-      - airflow-webserver
-    environment:
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_USER=orchuser
-      - DB_PASSWORD=orchpass
-      - DB_NAME=orchservice
-      - AIRFLOW_BASE_URL=http://airflow-webserver:8080
-      - AIRFLOW_USERNAME=admin
-      - AIRFLOW_PASSWORD=admin
+      - minio
     networks:
-      - aien-network
+      - aien_network
 
+  # Data Analysis Service
   data-analysis-service:
-    build: ./data-analysis-service
+    build:
+      context: ./data-analysis-service
+      dockerfile: Dockerfile
+    container_name: aien_data_analysis
     ports:
       - "8083:8080"
-    depends_on:
-      - ollama
-      - minio
     environment:
-      - OLLAMA_URL=http://ollama:11434
+      - CUSTOM_LLM_URL=http://custom-llm:8124/api/v1/process
+      - CUSTOM_LLM_API_KEY=
       - MINIO_URL=http://minio:9000
-      - PORT=8080
-    networks:
-      - aien-network
-
-
-  ollama:
-    image: ollama/ollama:latest
-    ports:
-      - "11434:11434"
-    volumes:
-      - ollama_data:/root/.ollama
-    environment:
-      - OLLAMA_HOST=0.0.0.0
-    networks:
-      - aien-network
-
-  # ========= ИНФРАСТРУКТУРНЫЕ СЕРВИСЫ =========
-
-  minio:
-    image: minio/minio:latest
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    volumes:
-      - minio_data:/data
-    environment:
-      - MINIO_ROOT_USER=minioadmin
-      - MINIO_ROOT_PASSWORD=minioadmin
-    command: server /data --console-address ":9001"
-    networks:
-      - aien-network
-
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    networks:
-      - aien-network
-
-  # ========= AIRFLOW =========
-
-  airflow-webserver:
-    image: apache/airflow:2.8.1
-    ports:
-      - "8082:8080"
-    environment:
-      - AIRFLOW__CORE__EXECUTOR=LocalExecutor
-      - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
-      - AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=true
-      - AIRFLOW__CORE__LOAD_EXAMPLES=false
-      - AIRFLOW__API__AUTH_BACKENDS=airflow.api.auth.backend.basic_auth
-      - AIRFLOW__WEBSERVER__EXPOSE_CONFIG=true
-      - AIRFLOW__WEBSERVER__AUTHENTICATE=true
-      - AIRFLOW__WEBSERVER__AUTH_BACKEND=airflow.auth.backends.basic_auth
-    volumes:
-      - ./airflow/dags:/opt/airflow/dags
-      - ./airflow/logs:/opt/airflow/logs
-      - ./airflow/plugins:/opt/airflow/plugins
     depends_on:
-      - postgres
-      - redis
+      - minio
+      - custom-llm
     networks:
-      - aien-network
+      - aien_network
 
-  airflow-scheduler:
-    image: apache/airflow:2.8.1
-    environment:
-      - AIRFLOW__CORE__EXECUTOR=LocalExecutor
-      - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
-      - AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=true
-      - AIRFLOW__CORE__LOAD_EXAMPLES=false
-    volumes:
-      - ./airflow/dags:/opt/airflow/dags
-      - ./airflow/logs:/opt/airflow/logs
-      - ./airflow/plugins:/opt/airflow/plugins
-    depends_on:
-      - postgres
-      - redis
-      - airflow-webserver
-    networks:
-      - aien-network
 
-  # ========= ЦЕЛЕВЫЕ СИСТЕМЫ ДЛЯ ТЕСТИРОВАНИЯ =========
-  
-  postgres:
-    image: postgres:15
+  # Frontend
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_DB: aien_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - "3001:80"
+    container_name: aien_frontend
+    restart: unless-stopped
     networks:
-      - aien-network
+      - aien_network
 
-
-networks:
-  aien-network:
-    driver: bridge
 
 volumes:
-  ollama_data:
   postgres_data:
   minio_data:
-  redis_data:
+
+networks:
+  aien_network:
+    driver: bridge
