fix api frontend, validated LLM response to backend

--- a/ai-data-engineer-backend/.env.example
+++ b/ai-data-engineer-backend/.env.example
@@ -17,7 +17,7 @@ CLICKHOUSE_PASSWORD=
 CLICKHOUSE_DB=aien_db
 
 # LLM Configuration
-LLM_BASE_URL=http://custom-llm:8124/api/v1/process
+LLM_BASE_URL=http://custom-llm:8124
 LLM_API_KEY=
 LLM_MODEL=openrouter/auto
 
